# Galaga

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.h  Entity.h  GameEngine.cpp  GameEngine.h  Makefile  README.md  galaga  main.cpp  player.cpp  player.h
include/: Alien.h  Entity.h  EntityFactory.h  EntityManager.h  Game.h  GameEngine.h  InputSystem.h  Missile.h  Player.h  RenderSystem.h  Sprite.h  Timer.h
include/Entities/: Alien.h  Game.h  Missile.h  Player.h  Sprite.h
include/Managers/: GameManager.h
src/: Alien.cpp  Entity.cpp  EntityFactory.cpp  EntityManager.cpp  Game.cpp  GameEngine.cpp  InputSystem.cpp  Missile.cpp  Player.cpp  RenderSystem.cpp  Sprite.cpp  Timer.cpp  Timer.h  game.h  main.cpp  makefile  player.cpp  player.h  prog  sprite.h
src/Entities/: Game.cpp  Missile.cpp  Player.cpp  Sprite.cpp
src/Managers/: AlienManager.cpp  AlienManager.h  GameManager.cpp  PlayerManager.cpp  PlayerManager.h
